fixed navbar toggler icon not showing up and wrong language selector margins on mobile

--- a/client/homepage/components/styles/main.less
+++ b/client/homepage/components/styles/main.less
@@ -22,6 +22,28 @@ a {
     width: inherit;
 }
 
+.lsLeft {
+    @media screen and (max-width: 991px) {
+        margin-left: 1.5rem !important;
+        margin-right: 1.5rem !important;
+    }
+    @media screen and (min-width: 992px) {
+        margin-left: 3rem !important;
+        margin-right: 0.25rem !important;
+    }
+}
+
+.lsRight {
+    @media screen and (max-width: 991px) {
+        margin-left: 1.5rem !important;
+        margin-right: 1.5rem !important;
+    }
+    @media screen and (min-width: 992px) {
+        margin-left: 0.25rem !important;
+        margin-right: 0 !important;
+    }
+}
+
 .dropdown-menu {
     min-width: 100%;
     background-color: transparent !important;
